Fix bug with justify elements on mobile devices

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,8 +12,9 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 15vh;
-  height: 100vh;
+  width: 100%;
+  height: auto;
+  padding: 20px;
   text-align: center;
 }
 
@@ -28,8 +29,6 @@ header {
 }
 
 .buttons {
-  width: 100%;
-  height: auto;
   margin-top: 50px;
   text-align: center;
   display: flex;
@@ -39,9 +38,9 @@ header {
 
   .btn {
     margin-bottom: 15px;
-    padding: 10px 0;
-    width: 350px;
-    height: 60px;
+    padding: 10px;
+    width: 250px;
+    height: auto;
     background-color: #55ACEE;
     color: #ffffff;
     font-family: "Averia Serif Libre", cursive;
